Changing background coolor in conteainer 2

--- a/index.html
+++ b/index.html
@@ -71,8 +71,26 @@
 </body>
 <hr>
 
-<footer>
-    <button>Skilmálar</button>
-    <button>Sendu okkur póst!</button>
-</footer>
+
+    <footer> 
+        <!-- Our Logo -->
+         <div class="info__container">
+           <div class="logo__container">
+           <img src="images/ifs.png" alt="logo">
+           </div>
+            <!-- Social Media Icons -->
+           <div clas="social__wrapper">
+             <ul class="social">
+               <li><a href="#"><img src="images/Facebook.svg"></a></li>
+             
+             </ul>
+         </div>
+         <!-- Contact card -->
+         <div class="contact__card">
+           <h3 class="contact__card__title">Hafa samband</h3>
+           <p>folf@folf.is</p>
+         </div>
+       </div>
+   </footer>
+
 </html>
